  If the lookup window is opened for an existing relative link that can be 
  resolved to a silva object, the reference window opens with that silva
  object's container.  The object within the container that is that was specified
  in the link is selected in the lookupwindow.  If the link is to a container,
  however, the lookup window is opened showing the containers contents.

Bug Fixes
~~~~~~~~~

- fixed bug #109007: wrong last author of published document in 
  properties tab.  The silva-extra last-author field's TALES now
  passes in the version to sec_get_last_author_info.  This requires
  a change to the metadata, which will happen during the extension 
  refresh phase of the silva upgrade

- exceptions raised during the upgrade process will now 
  include the object causing the error in the traceback.

- Fix annoying popup when using kupu in safari

- It is now possible to switch between abbreviations and
  acronyms in kupu by selecting the appropriate radio button
  and clicking 'update'

- Added an optional 'edit link reference' button to the 
  reference lookup window formulator widget.  Clicking this
  button on a valid silva reference will open up that reference's
  edit tab in a new window.

- changed presentation lookupwindow widget displays in
  kupu.  The link tools lookup widget has the new 'button with
  image' style for the get button, an edit reference button, and
  these buttons are displayed to the left and right (resp.) of the
  input field.

- Indexer, File and Image use Z3C forms as add forms.

- Interfaces have moved in silva.core.interfaces.

- Silva Link are displayed by default in Kupu TOCs.

- CTRL+SHIFT+ENTER in kupu while the cursor is in a table will
  create a new empty paragraph below the table.  This feature
  is to improve editing ability when a table is adjacent to an
  external source or another table

- improve keyboard navigability in kupu around external sources:
  left,right in an ES moves cursor up